[gd_scene load_steps=4 format=3 uid="uid://dpqqe8wdbikrv"]

[ext_resource type="FontFile" uid="uid://cyv5okyo2hgew" path="res://assets/poco.ttf" id="1_2g2nj"]
[ext_resource type="Script" path="res://objects/messagebox.gd" id="1_vkfqa"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_epouy"]
bg_color = Color(0.137255, 0.137255, 0.137255, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[node name="MessageBox" type="CanvasLayer"]
script = ExtResource("1_vkfqa")

[node name="MessageBoxContainer" type="MarginContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -155.5
offset_top = 37.0
offset_right = 155.5
offset_bottom = 148.0
grow_horizontal = 2
scale = Vector2(0.809694, 0.681927)
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Panel" type="Panel" parent="MessageBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_epouy")

[node name="MarginContainer" type="MarginContainer" parent="MessageBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 7
theme_override_constants/margin_top = 7
theme_override_constants/margin_right = 7
theme_override_constants/margin_bottom = 7

[node name="VBoxContainer" type="VBoxContainer" parent="MessageBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/separation = 3

[node name="Text1" type="Label" parent="MessageBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_2g2nj")
theme_override_font_sizes/font_size = 20
text = "THIS IS A SAMPLE TEXT"

[node name="Text2" type="Label" parent="MessageBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_2g2nj")
theme_override_font_sizes/font_size = 20
text = "THIS IS A SAMPLE TEXT"
